Handle Async Better + fix event firing in async